<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="managereceivelist"
            type="com.skc.committeemanagement.ui.receive.ReceiveStructure" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skcsamiti.samitisath.ui.manage_receive.MangeListOfReceiveFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/TextLayoutMy.Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/edit_text_name"
            style="@style/MyAutoComepleteText"
            android:hint="@string/name_hint"
            android:inputType="none"
            android:text="@{managereceivelist.name}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        style="@style/TextLayoutMy.Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <AutoCompleteTextView
            android:inputType="none"
            android:id="@+id/edit_text_address"
            style="@style/MyAutoComepleteText"
            android:hint="@string/address_hint"
            android:text="@{managereceivelist.address}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/principal_amount_layout"
        style="@style/TextLayoutMy.PrincipalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/edit_text_principal_amount"
            android:inputType="none"
            android:hint="@string/principal_amount_hint"
            style="@style/MyAutoComepleteText"
            android:text="@{managereceivelist.principal_amount}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rate_layout"
        style="@style/MyDropDownListLayout.Rate"
        app:layout_constraintTop_toBottomOf="@id/principal_amount_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/edit_text_rate"
            android:hint="@string/select_rate"
            android:inputType="none"
            style="@style/MyAutoComepleteText"
            android:text="@{managereceivelist.rate}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/intrest_amount_layout"
        style="@style/TextLayoutMy.InterestAmount"
        app:layout_constraintTop_toBottomOf="@id/rate_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/edit_text_intrest_amount"
            style="@style/MyAutoComepleteText"
            android:hint="@string/interest_hint"
            android:layout_width="match_parent"
            android:inputType="none"
            android:layout_height="wrap_content"
            android:text="@{managereceivelist.interest}"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_amount_layout"
        style="@style/TextLayoutMy.TotalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intrest_amount_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_total_amount"
            android:hint="@string/total_amount_hint"
            style="@style/MyAutoComepleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@{managereceivelist.total_amount}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_layout"
        style="@style/TextLayoutMy.Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_amount_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_number"
            android:hint="@string/mobile_number_hint"
            style="@style/MyAutoComepleteText"
            android:inputType="none"
            android:text="@{managereceivelist.number}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        style="@style/MyDropDownListLayout.Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_date"
            android:hint="@string/select_date"
            android:inputType="none"
            style="@style/MyAutoComepleteText.Date"
            android:text="@{managereceivelist.date}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout_to"
        style="@style/MyDropDownListLayout.Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_layout"
        tools:layout_editor_absoluteY="164dp">

        <AutoCompleteTextView
            android:id="@+id/edit_text_date_to"
            style="@style/MyAutoComepleteText.Date"
            android:text="@{managereceivelist.receiveDate}"
            android:layout_width="match_parent"
            android:inputType="none"
            android:layout_height="wrap_content"
            android:hint="@string/receive_date"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <Button-->
<!--        android:id="@+id/button_update_db"-->
<!--        style="@style/MyButton.Update"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/button_delete_db"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/button_delete_db"-->
<!--        style="@style/MyButton.Delete"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.75"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>