<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="receivemanageStructure"
            type="com.skc.committeemanagement.ui.receive.ReceiveStructure" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skcsamiti.samitisath.ui.receive.ReceiveMangeFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/TextLayoutMy.Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            style="@style/MyAutoComepleteText"
            android:hint="@string/name_hint"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{receivemanageStructure.name}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/principal_amount_layout"
        style="@style/TextLayoutMy.PrincipalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <AutoCompleteTextView
            android:hint="@string/principal_amount_hint"
            android:id="@+id/edit_text_principal_amount"
            android:inputType="none"
            style="@style/MyAutoComepleteText"
            android:text="@{receivemanageStructure.principal_amount}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        style="@style/MyDropDownListLayout.Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal_amount_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_date"
            android:hint="@string/pay_date"
            style="@style/MyAutoComepleteText.Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{receivemanageStructure.date}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout_to"
        style="@style/MyDropDownListLayout.Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_layout"
        tools:layout_editor_absoluteY="164dp">

        <AutoCompleteTextView
            android:id="@+id/edit_text_date_to"
            style="@style/MyAutoComepleteText.Date"
            android:text="@{receivemanageStructure.receiveDate}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receive_date"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <AutoCompleteTextView-->
<!--        android:id="@+id/autoComplete"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="type"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/receive_layout_text_total_amount" />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/intrest_amount_layout"
        style="@style/TextLayoutMy.InterestAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_layout_to"
        tools:layout_editor_absoluteY="246dp">

        <AutoCompleteTextView
            android:id="@+id/edit_text_intrest_amount"
            style="@style/MyAutoComepleteText"
            android:hint="@string/interest_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{receivemanageStructure.interest}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_amount_layout"
        style="@style/TextLayoutMy.TotalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intrest_amount_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_total_amount"
            style="@style/MyAutoComepleteText"
            android:hint="@string/total_amount_hint"
            android:text="@{receivemanageStructure.total_amount}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/calculate"
        android:text="@string/calculate"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/clr_dark_primary"
        app:layout_constraintTop_toBottomOf="@id/total_amount_layout"
        app:layout_constraintStart_toStartOf="@id/total_amount_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/receive_button"
        style="@style/MyButton.Receive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>