<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="managepaystructure"
            type="com.skc.committeemanagement.ui.manage_pay.ManagePayStructure" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skcsamiti.samitisath.ui.manage_pay.ManagePayUpdateDeleteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/TextLayoutMy.Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            style="@style/TextInputEditText.Name"
            android:text="@={managepaystructure.name}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        style="@style/TextLayoutMy.Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            style="@style/TextInputEditText.Address"
            android:text="@={managepaystructure.address}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_layout"
        style="@style/MyDropDownListLayout"
        app:endIconMode="none"
        app:startIconDrawable="@drawable/ic_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_amount"
            style="@style/MyAutoComepleteText"
            android:hint="@string/amount_hint"
            android:inputType="none"
            android:text="@={managepaystructure.amount}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rate_layout"
        style="@style/MyDropDownListLayout.Rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_rate"
            android:hint="@string/select_rate"
            style="@style/MyAutoComepleteText.Rate"
            android:text="@={managepaystructure.rate}"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_layout"
        style="@style/TextLayoutMy.Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_number"
            style="@style/TextInputEditText.Number"
            android:text="@={managepaystructure.number}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        style="@style/MyDropDownListLayout.Date"
        app:boxCornerRadiusBottomEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_layout">

        <AutoCompleteTextView
            android:id="@+id/edit_text_date"
            android:hint="@string/select_date"
            style="@style/MyAutoComepleteText.Date"
            android:text="@={managepaystructure.date}"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_update_db"
        style="@style/MyButton.Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_db"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_layout" />

    <Button
        android:id="@+id/button_delete_db"
        style="@style/MyButton.Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>